--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 
 <body>
     <h1>Testing the <%=serverName%> server</h1>
-    <h2>Welcome to the EJS homepage. Nodemon is watching</h2>
+    <h2>Welcome to the EJS homepage. Nodemon is watching. Working on it from the work PC</h2>
 </body>
 <script>
     // Pass raw JSON data from EJS
