--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,36 @@
 <html lang="en">
 
 <head>
-    <title>The server test</title>
+    <title>Echo Lab</title>
 </head>
 
 <body>
-    <h1>Testing the EchoLab</h1>
-</body>
-<script>
-    // Pass raw JSON data from EJS
-    const theObject = <%- JSON.stringify(theObject) %>;
+    <h1>EchoLab Overview</h1>
+    <!-- <pre><%= JSON.stringify(data, null, 2) %></pre> -->
+    <h2>Figures</h2>
+    <ul>
+    <% data.figures.forEach(figure => { %>
+        <li><strong><%= figure.name %></strong> - <%= figure.lifespan %></li>
+    <% }); %>
+    </ul>
 
-    // Properly format and display in <pre>
-    document.body.innerHTML += `<pre>${JSON.stringify(theObject, null, 2)}</pre>`;
-</script>
+    <h2>Titles</h2>
+    <ul>
+    <% data.titles.forEach(title => { %>
+        <li><%= title.title %> - <%= title.type%></li>
+    <% }); %>
+    </ul>
+
+    <h2>Concepts</h2>
+    <ul>
+    <% data.concepts.forEach(concept => { %>
+        <li><strong><%= concept.term %></strong> - <%= concept.definition %></li>
+    <% }); %>
+    </ul>
+    
+
+</body>
+
+
 
 </html>
