--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,21 +10,21 @@
     <h2>Figures</h2>
     <ul>
     <% data.figures.forEach(figure => { %>
-        <li><strong><%= figure.name %></strong> - <%= figure.lifespan %></li>
+        <li><a href="/figures/<%=figure.id %>"><%= figure.name %></a> - <%= figure.lifespan %></li>
     <% }); %>
     </ul>
 
     <h2>Titles</h2>
     <ul>
     <% data.titles.forEach(title => { %>
-        <li><%= title.title %> - <%= title.type%></li>
+        <li><a href="/titles/<%=title.id %>"><%= title.title %></a> - <%= title.type%></li>
     <% }); %>
     </ul>
 
     <h2>Concepts</h2>
     <ul>
     <% data.concepts.forEach(concept => { %>
-        <li><strong><%= concept.term %></strong> - <%= concept.definition %></li>
+        <li><a href="/concepts/<%=concept.id %>"><%= concept.term %></a> - <%= concept.definition %></li>
     <% }); %>
     </ul>
     
