--- a/views/movement.ejs
+++ b/views/movement.ejs
@@ -22,6 +22,13 @@
     <% }) %>
   </ul>
 
+  <h2>Titles</h2>
+  <ul>
+    <% titles.forEach(t => { %>
+      <li><a href="/titles/<%= t.id %>"><%= t.title %></a></li>
+    <% }) %>
+  </ul>
+
   <p><a href="/">Back to homepage</a></p>
 </body>
 </html>
